add interface and charactersCollection and LinkedList class

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
-/Maps/node_modules
-/Maps/dist
-/Maps/.cache
+/*/node_modules
+/*/dist
+/*/.cache
 
 # testing
 /coverage
